--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "dexie": "^4.0.11",
     "element-ui": "^2.15.14",
     "express": "^5.1.0",
     "nedb": "^1.8.0",
