--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dexie": "^4.0.11",
     "element-ui": "^2.15.14",
     "express": "^5.1.0",
+    "mysql2": "^3.14.0",
     "nedb": "^1.8.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
