--- a/package.json
+++ b/package.json
@@ -7,14 +7,14 @@
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
     "start": "npm run dev",
-    "build": "node build/build.js"
+    "build": "node build/build.js",
+    "electron:start": "electron ."
   },
   "dependencies": {
     "dexie": "^4.0.11",
+    "electron": "^35.1.5",
     "element-ui": "^2.15.14",
     "express": "^5.1.0",
-    "mysql2": "^3.14.0",
-    "nedb": "^1.8.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
