--- a/package.json
+++ b/package.json
@@ -4,25 +4,29 @@
   "description": "A Vue.js project",
   "author": "sss <mengfei.heng@aidream.group>",
   "private": true,
+  "main": "main.js",
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
     "start": "npm run dev",
-    "build": "node build/build.js",
-    "electron:start": "electron ."
+    "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^1.5.0",
     "dexie": "^4.0.11",
-    "electron": "^35.1.5",
     "element-ui": "^2.15.14",
     "express": "^5.1.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.26.10",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.18.6",
+    "@babel/plugin-proposal-optional-chaining": "^7.21.0",
+    "@babel/preset-env": "^7.26.9",
     "autoprefixer": "^7.1.2",
     "babel-core": "^6.22.1",
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
-    "babel-loader": "^7.1.1",
+    "babel-loader": "^7.1.5",
     "babel-plugin-syntax-jsx": "^6.18.0",
     "babel-plugin-transform-runtime": "^6.22.0",
     "babel-plugin-transform-vue-jsx": "^3.5.0",
